<resources>
    <string name="app_name">Mi Directorio</string>
    <string name="tv_titulo">Bienvenidos</string>
    <string name="btn_consulta">Buscar</string>
    <string name="btn_segundo">Inscribir</string>
    <string name="tv_titulo2">Seccion de busquedas</string>
    <string name="item1"></string>
    <string name="item2">Buscar</string>
    <string name="item3">Listar</string>
    <string name="item4">Acerca de</string>
    <string name="etxt_direccion">Dirección</string>
    <string name="iv_foto"></string>
    <string name="btn_lista">LISTA</string>
    <string name="btn_eliminar">ELIMINAR</string>
    <string name="btn_editar">MODIFICAR</string>
    <string name="etxt_descripcion">Descripción o referencia</string>
    <string name="etxt_buscar">Buscar</string>
    <string name="et_buscar">Dirección Busqueda</string>
    <string name="tvb_dir"></string>
    <string name="tvb_des"></string>
    <string name="txt_cantidad"></string>

    <string name="btn_guardar">GUARDAR</string>
    <string name="imgv_buscar">Buscar</string>
</resources>
