<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buscarActivity">

    <TextView
        android:id="@+id/tv_titulo2"
        android:layout_width="139dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_titulo2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="318dp"
        android:layout_height="253dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo2"
        app:layout_constraintVertical_bias="0.078">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_buscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_buscar"
                android:inputType="textPostalAddress" />

            <ImageView
                android:id="@+id/img_fotoconsulta"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/previo" />

            <TextView
                android:id="@+id/tvb_dir"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/tvb_des"
                android:layout_width="match_parent"
                android:layout_height="38dp" />

            <Button
                android:id="@+id/btn_buscar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:onClick="consultar"
                android:text="@string/btn_buscar"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintVertical_bias="0.0" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>