<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txt_cantidad"
        android:layout_width="374dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="24dp"
        android:foregroundGravity="center"
        android:text="@string/txt_cantidad" />

    <TextView
        android:id="@+id/tv_bienvenidos"
        android:layout_width="217dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp"
        android:text="@string/tv_titulo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="331dp"
        android:layout_below="@+id/tv_bienvenidos"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp">

        <EditText
            android:id="@+id/etxt_direccion"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/etxt_direccion"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/etxt_descripcion"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_direccion"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/etxt_descripcion"
            android:inputType="textMultiLine" />

        <Spinner
            android:id="@+id/spinner_categoria"
            android:layout_width="348dp"
            android:layout_height="42dp"
            android:layout_below="@+id/etxt_descripcion"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_above="@+id/btn_guardar"
            android:layout_below="@+id/spinner_categoria"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_foto"
                android:layout_width="112dp"
                android:layout_height="55dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/previo" />

            <ImageButton
                android:id="@+id/cargarfoto"
                android:layout_width="95dp"
                android:layout_height="55dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/camara" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="15dp"
            android:background="#FF070707"
            android:onClick="Guardar"
            android:shadowColor="#00CEC3C3"
            android:text="@string/btn_guardar"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

</RelativeLayout>